--- a/valentine.html
+++ b/valentine.html
@@ -127,9 +127,10 @@ button:hover{
     <div class="gift">
         <h2>Gift 1 — ❤️</h2>
         
-    <img src="images.jpg\image1.jpg" alt="valentine image image 1" class="gift-img">
-    <img src="images.jpg\image2.jpg" alt="valentine image image 2" class="gift-img">
-     <img src="images.jpg\image3.jpg" alt="valentine image image 2" class="gift-img"> 
+    <img src="images\image1.jpg" alt="valentine image image 1" class="gift-img">
+
+    <img src="images\image2.jpg" alt="valentine image image 2" class="gift-img">
+     <img src="images\image3.jpg" alt="valentine image image 2" class="gift-img"> 
         <h2>The Beauty of OJOCHENEMI ❤️</h2>
         <h3>she's so beautiful</h3>
     </div>
